Fix designs scrollbar, erase one glasses

--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,9 @@ h1 {
   overflow-y: hidden;
   
 }
-.design-slider > .imgdiv > img{
+.design-slider > .imgdiv > img {
   width: 100%;
+  max-height: 100%;
   height: 100%;
   max-width: 100%;
   object-fit: contain;
@@ -119,11 +120,12 @@ h1 {
 }
 .imglabel {
   text-align: end;
-  padding-right: .5rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
   z-index: 2;
   position: static;
   color: #1d1d1f;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .imgdiv {
   display: flex;
